# visual_servoing

./: .envrc  .gitignore  README.md  pyproject.toml  run_all_sim.py  update_git.py
parking_controller/: .envrc  pyproject.toml  run.py  run.sh  run_all_sim.py
parking_controller/.github/workflows/: ci.yml
parking_controller/parking_controller/: core.py  main.py  metrics.py
parking_controller/tests/: conftest.py  docker-compose.yml  plot_metrics.py  record_metric.pkl  run_tests_actions.sh  test_moving.py  test_park.py
tests/: conftest.py  test_park.py
visual_servoing/visual_servoing/: cone_detector.py  cone_detector_temp.py  homography_transformer.py
visual_servoing/visual_servoing/computer_vision/: color_segmentation.py  cv_test.py  sift_template.py
