[tool.poetry]
name = ""
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.11"

libracecar = { path = "/home/dockeruser/racecar_ws/src/libracecar/", develop = true }
# libracecar = { git = "https://github.com/rss2025-4/libracecar.git" }
pytest-timeout = "^2.3.1"
matplotlib = "^3.10.1"

[tool.isort]
profile = "black"
known_first_party = ["libracecar"]

[tool.pyright]
exclude = ["**/result*"]
typeCheckingMode = "basic"
